# evaluation-reports-synthesis

./: .gitignore  default_extraction_config.yaml  link_map.csv  main.py  plots.py  project.yaml  pyproject.toml
data/: development_labelled_data.csv  labelled_data.csv
prompts/: prompt_definitions.csv
scripts/: create_link_map.ipynb  load_eppi_data.ipynb
