[project]
name = "evaluation-report-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "chromadb>=1.3.6",
    "data-extraction-evaluation-toolkit",
    "deep-translator>=1.11.4",
    "fastparquet>=2024.11.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langdetect>=1.0.9",
    "lxml>=6.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pyarrow>=22.0.0",
    "rapidfuzz>=3.14.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "umap-learn>=0.5.11",
]

[tool.uv.sources]
data-extraction-evaluation-toolkit = { git = "https://github.com/destiny-evidence/data-extraction-evaluation-toolkit.git", rev = "docs/doc-structure-iwizards" }
